{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 240,
  "lineage": "d7e6941c-d4b8-1b82-01eb-2c0159afd9e0",
  "resources": [
    {
      "module": "module.TheEC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TheEC2_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0944e91aed79c721c",
            "arn": "arn:aws:ec2:us-west-2:376133810889:instance/i-0219218dfee458f5f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "name": "My EBS for My EC2"
                },
                "throughput": 0,
                "volume_id": "vol-0713937cb1e64c96e",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0219218dfee458f5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TopLevel",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037caf617005930d0",
            "private_dns": "ip-10-0-10-128.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ec950f796ea754c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088bcd7a8012fffc6",
            "tags": {
              "name": "The App EC2 instance with EBS"
            },
            "tags_all": {
              "name": "The App EC2 instance with EBS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dba56b38cc9c84f7"
            ]
          },
          "dependencies": [
            "module.TheEC2-SG.aws_security_group.MyEC2_SG_Resource",
            "module.TheInternetGateway.aws_internet_gateway.GW",
            "module.TheVPC.aws_subnet.TheVPC_Resource_Private_Subnet",
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheEC2-SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyEC2_SG_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:security-group/sg-0dba56b38cc9c84f7",
            "description": "The security group for the EC2 instance",
            "egress": [],
            "id": "sg-0dba56b38cc9c84f7",
            "ingress": [],
            "name": "EC2-SG",
            "name_prefix": "",
            "owner_id": "376133810889",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Control SG Access EC2"
            },
            "tags_all": {
              "name": "Control SG Access EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbeb5a7d7a2f8455"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheEC2-SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SG_EC2_Inbound_Rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-461086006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dba56b38cc9c84f7",
            "security_group_rule_id": "sgr-0bb0014ce0c12c8e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.TheEC2-SG.aws_security_group.MyEC2_SG_Resource",
            "module.TheVPC.aws_subnet.TheVPC_Resource_Public_Subnet",
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheEC2-SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SG_EC2_Outbound_Rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3614041531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dba56b38cc9c84f7",
            "security_group_rule_id": "sgr-0f415c4ce83a3ac46",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.TheEC2-SG.aws_security_group.MyEC2_SG_Resource",
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheInternetGateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:internet-gateway/igw-079f95476b0e2b5f6",
            "id": "igw-079f95476b0e2b5f6",
            "owner_id": "376133810889",
            "vpc_id": "vpc-0bbeb5a7d7a2f8455"
          },
          "dependencies": [
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheLB",
      "mode": "managed",
      "type": "aws_elb",
      "name": "TheELB_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:376133810889:loadbalancer/tf-lb-20240118030947295900000003",
            "availability_zones": [
              "us-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240118030947295900000003-1801813819.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20240118030947295900000003",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20240118030947295900000003",
            "name_prefix": "tf-lb-",
            "security_groups": [
              "sg-0dea5c9c237a46dca"
            ],
            "source_security_group": "376133810889/default",
            "source_security_group_id": "sg-0dea5c9c237a46dca",
            "subnets": [
              "subnet-0c6e532aa818af50d"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.TheVPC.aws_subnet.TheVPC_Resource_Public_Subnet",
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TheVPC_Resource_Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:subnet/subnet-088bcd7a8012fffc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088bcd7a8012fffc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376133810889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bbeb5a7d7a2f8455"
          },
          "dependencies": [
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TheVPC_Resource_Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:subnet/subnet-0c6e532aa818af50d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6e532aa818af50d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376133810889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bbeb5a7d7a2f8455"
          },
          "dependencies": [
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheVPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TheVPC_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:vpc/vpc-0bbeb5a7d7a2f8455",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b8768fd615c9b72",
            "default_route_table_id": "rtb-097cccf3113cc4360",
            "default_security_group_id": "sg-0dea5c9c237a46dca",
            "dhcp_options_id": "dopt-ed632495",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbeb5a7d7a2f8455",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097cccf3113cc4360",
            "owner_id": "376133810889",
            "tags": {
              "name": "Prod VPC"
            },
            "tags_all": {
              "name": "Prod VPC"
            }
          }
        }
      ]
    }
  ]
}